// message.proto
syntax = "proto3";

option java_package = "io.nuwe.technical.api.lib";
option java_outer_classname = "MessageProto";

package messageproto;

// Message payload
message Message {
    int64 id = 1;
    int64 userSenderId = 2;
    int64 userReceiverId = 3;
    string body = 4;
    string sentAt = 5;
}

message MessageFromToRequest {
    int64 userSenderId = 1;
    int64 userReceiverId = 2;
}

message MessageUserRequest {
    int64 userId = 1;
}

message MessageResponse {
    repeated Message messages = 1;
}

// Message service
service MessageService {
    rpc getMessagesFromTo(MessageFromToRequest) returns (MessageResponse);
    rpc getMessagesReceivedFrom(MessageUserRequest) returns (MessageResponse);
    rpc getMessagesSentFrom(MessageUserRequest) returns (MessageResponse);
}